# procedural-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  turbo.json
apps/web/: app.vue  nuxt.config.ts  package.json
apps/web/assets/typescript/: utils.ts
apps/web/components/: Lattice1Grid.vue  Lattice1Renderer.vue  Lattice2Grid.vue  Lattice2Overlay.vue  Lattice2Pointer.vue  Lattice2Renderer.vue
apps/web/pages/: game-of-life.vue  wolfram-code.vue
crates/game_of_life/: Cargo.toml  package.json
crates/game_of_life/src/: automaton.rs  lib.rs  main.rs  rule.rs  state.rs  utils.rs
crates/lattice-wasm-macros/: Cargo.toml
crates/lattice-wasm-macros/src/: lib.rs
crates/lattice-wrapper-macros/: Cargo.toml
crates/lattice-wrapper-macros/src/: lib.rs  macros.rs  prelude.rs
crates/toolkit/: Cargo.toml  package.json
crates/toolkit/src/: aliases.rs  lib.rs  point.rs  prelude.rs  types.rs  utils.rs
crates/toolkit/src/lattice/: lattice1.rs  lattice1_point.rs  lattice2.rs  lattice2_point.rs  lattice3.rs  lattice3_point.rs  mod.rs  universal_lattice.rs  universal_lattice_point.rs  universal_lattice_size.rs  universal_point.rs  universal_point_generator.rs
crates/toolkit/src/neighborhood/: mod.rs  moore.rs  nearest.rs
crates/wolfram_code/: Cargo.toml  package.json
crates/wolfram_code/src/: automaton.rs  lib.rs  main.rs  rule.rs  state.rs
src/: lib.rs  point.rs  prelude.rs  utils.rs
